test(editors): value without mask symbols #1853

--- a/tests/unit/editors/dateEditor/tests.html
+++ b/tests/unit/editors/dateEditor/tests.html
@@ -4011,6 +4011,20 @@
 					$dtEditor.remove();
 				}, 300);
 			});
+
+			QUnit.test('Test plain values that are not containing mask values', function (assert) {
+				assert.expect(2);
+				var $dtEditor = $("<input/>").appendTo("#testBedContainer").igDateEditor({
+					dateInputFormat: "dateTime",
+					value: new Date(2017, 7, 18, 18, 6)
+				});
+				var inp = $dtEditor.igDateEditor("field");
+				inp.focus();
+				inp.val("010120180000");
+				inp.blur();
+				assert.equal($dtEditor.igDateEditor("displayValue"), "1/1/2018 12:00 AM", 'The value is not as expected');
+				assert.equal($dtEditor.igDateEditor("value").getTime(), new Date(2018, 0, 1).getTime(), "Runtime time display format not applied");
+			});
 		});
 
 		// function emulateKeyBoard(key, ctrl, shift, alt, element) {
