--- a/demos/editors/time-picker.html
+++ b/demos/editors/time-picker.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <!-- Ignite UI Required Combined CSS Files -->
-    <link href="../../igniteui/css/themes/infragistics/infragistics.theme.css" rel="stylesheet" />
-    <link href="../../igniteui/css/structure/infragistics.css" rel="stylesheet" />
+    <link href="../../dist/css/themes/infragistics/infragistics.theme.css" rel="stylesheet" />
+    <link href="../../dist/css/structure/infragistics.css" rel="stylesheet" />
     <style>
         h3 {
             font-size: 20px;
@@ -49,8 +49,8 @@
     <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
     <!-- Ignite UI Required Combined JavaScript Files -->
-    <script src="../../igniteui/js/infragistics.core.js"></script>
-    <script src="../../igniteui/js/infragistics.lob.js"></script>
+    <script src="../../dist/js/infragistics.core-lite.js"></script>
+    <script src="../../dist/js/infragistics.lob-lite.js"></script>
 </head>
 <body>
     <h3>$$(day_organizer)</h3>
