test(igTimePicker): references and clean fixture #1885

--- a/tests/unit/knockout/editors/igTimePicker/tests.html
+++ b/tests/unit/knockout/editors/igTimePicker/tests.html
@@ -32,7 +32,8 @@
 
 	<script type="text/javascript" src="../../../../../src/js/extensions/infragistics.ui.editors.knockout-extensions.js"></script>
 
-	<script type="text/javascript" src="datepicker-test.js"></script>
+	<script type="text/javascript" src="../../../common/test-util.js"></script>
+	<script type="text/javascript" src="timepicker-test.js"></script>
 </head>
 <body>
 	<!-- <div id="qunit"></div> -->
