test(htmleditor): return the dafault state of the tests
Closes #3815

--- a/tests/unit/htmleditor/basicfunctionalities/rendering/tests.html
+++ b/tests/unit/htmleditor/basicfunctionalities/rendering/tests.html
@@ -1154,13 +1154,13 @@
                         $.browser = { "IE": "IE"};
                         htmlEditor.data("igHtmlEditor")._selectionWrapperSaved._commands.insertunorderedlist.browsers = ["IE", "Chrome"];
                         htmlEditor.data("igHtmlEditor")._selectionWrapperSaved.execCommand("insertunorderedlist", null);
-                        equal(htmlEditor.igHtmlEditor("getContent", "html"), '<ul><li><i>Some content</i></li></ul>', "Content changed to have unordered list");
+                        equal(htmlEditor.igHtmlEditor("getContent", "html"), '<ul><li><i>Some content</i><br></li></ul>', "Content changed to have unordered list");
 
                         $.browser = undefined;
                         htmlEditor.data("igHtmlEditor")._selectionWrapperSaved.execCommand("insertunorderedlist", null);
                         htmlEditor.data("igHtmlEditor")._selectionWrapperSaved.execCommand("bold", null);
 
-                        equal(htmlEditor.igHtmlEditor("getContent", "html"), '<i style=\"font-weight: bold;\">Some content</i>', "Content remains the same");
+                        equal(htmlEditor.igHtmlEditor("getContent", "html"), '<i style=\"font-weight: bold;\">Some content</i><br>', "Content remains the same");
                         start();
                     }, 200);
 
