fix(combo): replace p tag with span and remove default height

--- a/demos/combo/templates.html
+++ b/demos/combo/templates.html
@@ -84,7 +84,7 @@
                 dataSource: "http://igniteui.com/api/employees?callback=?",
                 headerTemplate: "<div id='comboHeaderTemplate' class='comboTemplates'>Employees</div>",
                 footerTemplate: "<div id='comboFooterTemplate' class='comboTemplates'>More information at <a href='http://www.infragistics.com' target='_blank'>http://www.infragistics.com</div>",
-                itemTemplate: "<div class='comboItemContainer'><div class='empImage'><a href='http://www.infragistics.com' target='_blank'><img src='${ImageUrl}' width='64px' /></a></div><div class='empInfo'><span class='empName'>${Name}</span><p>${BirthDate}</p><div>${Address}</div></div></div>"
+                itemTemplate: "<div class='comboItemContainer'><div class='empImage'><a href='http://www.infragistics.com' target='_blank'><img src='${ImageUrl}' width='64px' /></a></div><div class='empInfo'><span class='empName'>${Name}</span><span>${BirthDate}</span><div>${Address}</div></div></div>"
             });
 
         });
