--- a/demos/templating-engine/basic-usage.html
+++ b/demos/templating-engine/basic-usage.html
@@ -84,7 +84,7 @@
                 dataSource: "http://igniteui.com/api/employees?callback=?",
                 headerTemplate: "<div id='comboHeaderTemplate' class='comboTemplates'>$$(employees)</div>",
                 footerTemplate: "<div id='comboFooterTemplate' class='comboTemplates'>$$(more_info) <a href='$$(more_info_url)' target='_blank'>$$(more_info_url)</div>",
-                itemTemplate: "<div class='comboItemContainer'><div class='empImage'><a href='$$(more_info_url)' target='_blank'><img src='${ImageUrl}' width='64px' /></a></div><div class='empInfo'><span class='empName'>${Name}</span><p>${BirthDate}</p><div>${Address}</div></div></div>"
+                itemTemplate: "<div class='comboItemContainer'><div class='empImage'><a href='$$(more_info_url)' target='_blank'><img src='${ImageUrl}' width='64px' /></a></div><div class='empInfo'><span class='empName'>${Name}</span><span>${BirthDate}</span><div>${Address}</div></div></div>"
             });
 
         });
