tests(*): some config changes

--- a/tests/unit/toolbarbutton/tests.html
+++ b/tests/unit/toolbarbutton/tests.html
@@ -18,6 +18,7 @@
 	<script type="text/javascript" src="../../../src/js/modules/infragistics.util.jquery.js"></script>
     <script type="text/javascript" src="../../../src/js/modules/infragistics.ui.shared.js"></script>
 	<script type="text/javascript" src="../../../src/js/modules/infragistics.ui.toolbarbutton.js"></script>
+	<script type="text/javascript" src="../common/test-util.js"></script>
 	<script type="text/javascript" src="toolbarbtn-test.js" ></script>	
 </head>
 
