chore(*): fixing test files

--- a/tests/unit/dataSource/schemas/tests.html
+++ b/tests/unit/dataSource/schemas/tests.html
@@ -12,6 +12,7 @@
 
 	<link type="text/css" href="../../../../node_modules/qunitjs/qunit/qunit.css" rel="stylesheet" media="screen" />
 	<script type="text/javascript" src="../../../../node_modules/qunitjs/qunit/qunit.js"></script>
+	<script type="text/javascript" src="schemas-test.js"></script>
 
 </head>
 <body>
