--- a/tests/unit/popover/specific/tests.html
+++ b/tests/unit/popover/specific/tests.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="../../../../src/js/modules/infragistics.ui.shared.js"></script>
     <script type="text/javascript" src="../../../../src/js/modules/infragistics.ui.popover.js"></script>
     <script type="text/javascript" src="../../../../node_modules/qunitjs/qunit/qunit.js"></script>
+    <script type="text/javascript" src="../../common/test-util.js"></script>
     <script type="text/javascript" src="specific-test.js"></script>
 </head>
 <body>
