--- a/tests/unit/dataSource/rest/tests.html
+++ b/tests/unit/dataSource/rest/tests.html
@@ -13,13 +13,14 @@
 	<script type="text/javascript" src="../../../../src/js/modules/infragistics.datasource.js"></script>
 
 	<script type="text/javascript" src="../../../../node_modules/qunitjs/qunit/qunit.js"></script>
+	<script type="text/javascript" src="rest-test.js"></script>
 </head>
-</body>
-<div style="float:right;width:400px;overflow:auto;">
-	<h1 id="qunit-header">Test results</h1>
-	<h2 id="qunit-banner"></h2>
-	<h2 id="qunit-userAgent"></h2>
-	<ol id="qunit-tests"></ol>
-</div>
+<body>
+	<div style="float:right;width:400px;overflow:auto;">
+		<h1 id="qunit-header">Test results</h1>
+		<h2 id="qunit-banner"></h2>
+		<h2 id="qunit-userAgent"></h2>
+		<ol id="qunit-tests"></ol>
+	</div>
 </body>
 </html>
