--- a/tests/unit/popover/common/tests.html
+++ b/tests/unit/popover/common/tests.html
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="../../../../src/js/modules/infragistics.ui.popover.js"></script>
     <script type="text/javascript" src="../../../../src/js/modules/infragistics.ui.editors.js"></script>
     <script type="text/javascript" src="../../../../node_modules/qunitjs/qunit/qunit.js"></script>
+    <script type="text/javascript" src="../../common/test-util.js"></script>
     <script type="text/javascript" src="common-test.js"></script>
 
     <style>
