test(*): updating jquery-ui reference

--- a/tests/unit/templating/tests.html
+++ b/tests/unit/templating/tests.html
@@ -6,7 +6,7 @@
 	<link type="text/css" href="../../../node_modules/qunit/qunit/qunit.css" rel="stylesheet" media="screen" />
 
 	<script type="text/javascript" src="../../../node_modules/jquery/dist/jquery.js"></script>
-	<script type="text/javascript" src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	<script type="text/javascript" src="../../../node_modules/jquery-ui/dist/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="../../../src/js/modules/infragistics.util.js"></script>
 	<script type="text/javascript" src="../../../src/js/modules/infragistics.util.jquery.js"></script>
 	<script type="text/javascript" src="../../../src/js/modules/i18n/infragistics.templating-en.js"></script>
