--- a/tests/unit/upload/tests.html
+++ b/tests/unit/upload/tests.html
@@ -8,7 +8,7 @@
 	<link id="lnkThemeCSS" href="../../../src/css/themes/infragistics/infragistics.theme.css"     rel="stylesheet" type="text/css" />
 
 	<script type="text/javascript" src="../../../node_modules/jquery/dist/jquery.js"></script>
-	<script type="text/javascript" src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	<script type="text/javascript" src="../../../node_modules/jquery-ui/dist/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="../../../node_modules/jquery-mockjax/dist/jquery.mockjax.js"></script>
 	<script type="text/javascript" src="mockServerUpload.js"></script>
 	<script type="text/javascript" src="../../../src/js/modules/infragistics.util.js"></script>
