--- a/tests/unit/combo/selection/tests.html
+++ b/tests/unit/combo/selection/tests.html
@@ -10,7 +10,7 @@
     <link type="text/css" href="../../../../node_modules/qunit/qunit/qunit.css" rel="stylesheet" media="screen" />
 
     <script type="text/javascript" src="../../../../node_modules/jquery/dist/jquery.js"></script>
-    <script type="text/javascript" src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script type="text/javascript" src="../../../node_modules/jquery-ui/dist/jquery-ui.min.js"></script>
     <script type="text/javascript" src="../../../../node_modules/jquery-mockjax/dist/jquery.mockjax.js"></script>
     <script type="text/javascript" src="../../../../tests/unit/common/test-util.js"></script>
     <script type="text/javascript" src="../../../../src/js/modules/infragistics.util.js"></script>
