--- a/tests/unit/dialog/tests.html
+++ b/tests/unit/dialog/tests.html
@@ -8,7 +8,7 @@
 	<link type="text/css" href="../../../src/css/structure/modules/infragistics.ui.dialog.css" rel="stylesheet" />
 
 	<script type="text/javascript" src="../../../node_modules/jquery/dist/jquery.js"></script>
-	<script type="text/javascript" src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	<script type="text/javascript" src="../../../node_modules/jquery-ui/dist/jquery-ui.min.js"></script>
 
 	<script type="text/javascript" src="../../../src/js/modules/i18n/infragistics.ui.dialog-es.js"></script>
 	<script type="text/javascript" src="../../../src/js/modules/i18n/infragistics.ui.dialog-en.js"></script>
