--- a/tests/unit/knockout/editors/igPercentEditor/tests.html
+++ b/tests/unit/knockout/editors/igPercentEditor/tests.html
@@ -11,7 +11,7 @@
 	<link type="text/css" href="../../../../../src/css/structure/modules/infragistics.ui.editors.css" rel="stylesheet" />
 	<link type="text/css" href="../../../../../src/css/structure/modules/infragistics.ui.validator.css" rel="stylesheet" />
 	<script type="text/javascript" src="../../../../../node_modules/jquery/dist/jquery.js"></script>
-	<script type="text/javascript" src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	<script type="text/javascript" src="../../../../../node_modules/jquery-ui/dist/jquery-ui.min.js"></script>
 	
 	<script type="text/javascript" src="../../../../../src/js/modules/i18n/infragistics.ui.popover-en.js"></script>
 	<script type="text/javascript" src="../../../../../src/js/modules/i18n/infragistics.ui.notifier-en.js"></script>
@@ -34,7 +34,7 @@
 	
 	<link type="text/css" href="../../../../../node_modules/qunit/qunit/qunit.css" rel="stylesheet" media="screen" />
 	<script type="text/javascript" src="../../../../../node_modules/qunit/qunit/qunit.js"></script>	
-	<script type='text/javascript' src='../../../../../node_modules/knockout/build/output/knockout-latest.debug.js'></script>
+	<script type='text/javascript' src="../../../../../node_modules/knockout/build/output/knockout-latest.debug.js"></script>
 
 	<script type="text/javascript" src="../../../../../src/js/extensions/infragistics.ui.editors.knockout-extensions.js"></script>
 	
