--- a/tests/unit/popover/specific/tests.html
+++ b/tests/unit/popover/specific/tests.html
@@ -6,7 +6,7 @@
     <link type="text/css" href="../../../../src/css/structure/modules/infragistics.ui.popover.css" rel="stylesheet" />
 
     <script type="text/javascript" src="../../../../node_modules/jquery/dist/jquery.js"></script>
-    <script type="text/javascript" src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script type="text/javascript" src="../../../node_modules/jquery-ui/dist/jquery-ui.min.js"></script>
 
     <script type="text/javascript" src="../../../../src/js/modules/infragistics.util.js"></script>
     <script type="text/javascript" src="../../../../src/js/modules/infragistics.util.jquery.js"></script>
