--- a/tests/unit/scroll/navigation/tests.html
+++ b/tests/unit/scroll/navigation/tests.html
@@ -9,7 +9,7 @@
 
 	<script type="text/javascript" src="../../../../node_modules/jquery/dist/jquery.js"></script>
 
-	<script type="text/javascript" src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	<script type="text/javascript" src="../../../node_modules/jquery-ui/dist/jquery-ui.min.js"></script>
 
 	<script type="text/javascript" src="../../../../src/js/modules/infragistics.util.js"></script>
 	<script type="text/javascript" src="../../../../src/js/modules/infragistics.util.jquery.js"></script>
