--- a/tests/unit/splitter/tests.html
+++ b/tests/unit/splitter/tests.html
@@ -10,7 +10,7 @@
 
 
 	<script type="text/javascript" src="../../../node_modules/jquery/dist/jquery.js"></script>
-	<script type="text/javascript" src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	<script type="text/javascript" src="../../../node_modules/jquery-ui/dist/jquery-ui.min.js"></script>
 
 	<script type="text/javascript" src="../../../src/js/modules/i18n/infragistics.ui.splitter-en.js"></script>
 	<script type="text/javascript" src="../../../src/js/modules/infragistics.util.js"></script>
