--- a/demos/combo/load-on-demand.html
+++ b/demos/combo/load-on-demand.html
@@ -54,7 +54,7 @@
         //  Helper function to put an item data token to the selected item table utilizing a jQuery template
         var selectedItemTemplate = '<tr><td class="propName">${propertyName}</td><td class="propValue">${propertyValue}</td></tr>';
         function addItemValue(tableObject, item, itemProp) {
-            if (!($.isFunction(item[itemProp]))) {
+            if (typeof item[itemProp] !== "function") {
                 $($.ig.tmpl(selectedItemTemplate,
                     {
                         "propertyName": itemProp,
