fix(*): removing a multitude of deprecated api usage

--- a/demos/combo/keyboard-navigation.html
+++ b/demos/combo/keyboard-navigation.html
@@ -126,7 +126,7 @@
                 $("#combo").igCombo("clearInput");
                 $("#combo").igCombo("closeDropDown");
                 $('#tooltip').tooltip('open');
-                $(".ui-igcombo-field").focus();
+                $(".ui-igcombo-field").trigger("focus");
             }
 
             function showMessage(message) {
