feat(*): separating block templating from regular one

--- a/tests/unit/templating/tests.html
+++ b/tests/unit/templating/tests.html
@@ -11,6 +11,7 @@
 	<script type="text/javascript" src="../../../src/js/modules/infragistics.util.jquery.js"></script>
 	<script type="text/javascript" src="../../../src/js/modules/i18n/infragistics.templating-en.js"></script>
 	<script type="text/javascript" src="../../../src/js/modules/infragistics.templating.js"></script>
+	<script type="text/javascript" src="../../../src/js/modules/infragistics.templating.advanced.js"></script>
 	<script type="text/javascript" src="../../../node_modules/qunit/qunit/qunit.js"></script>
 	<script type="text/javascript" src="../common/test-util.js"></script>
 	<script type="text/javascript" src="DB3.js"></script>
